fix: update dashboard background gradient and bg image. and adjust sidebar background color for improved visibility

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -210,8 +210,8 @@ body {
   background-image: linear-gradient(
     to bottom,
     var(--color-bg) 0%,
-    #1d2216 38%,
-    #313d24 100%
+    #0c0e09 64%,
+    #191e13 100%
   );
 }
 .auth-popup {
